<resources>
    <string name="app_name">Homework organizer FINAL</string>
    <string name="assignment_list_fragment_tag">assignment_list_tag</string>
    <string name="math">math</string>
    <string name="english">english</string>
    <string name="history">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="precalc_ref_key">precalc_ref_key</string>
    <string name="apbio_pref_key">apbio_pref_key</string>
    <string name="mobileapp_pref_key">mobileapp_pref_key</string>
    <string name="science_pref_key">science_pref_key</string>
    <string name="precalc">PreCalc</string>
    <string name="apbio">APbio</string>
    <string name="mobileapp">MobileApp</string>
    <string name="science">Science</string>
    <string name="settings">settings</string>
    <string name="subjects">Subjects</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>